[package]
name = "challenge-bypass-ristretto-wasm"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"
description = "a WASM crate to expose functionality from challenge-bypass-ristretto (WIP)"

[lib]
crate-type = ["cdylib"]
name = "challenge_bypass_ristretto"

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }
sha2 = "0.9"
hmac = "0.10"

[dependencies.challenge-bypass-ristretto]
version = "1.0.2"
features = ["base64"]

[dependencies.cbr-macros]
path = "../cbr-macros"
