[package]
name = "challenge-bypass-ristretto-wasm"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2024"
description = "a WASM crate to expose functionality from challenge-bypass-ristretto (WIP)"

[lib]
crate-type = ["cdylib"]
name = "challenge_bypass_ristretto"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
hmac = "0.12"
challenge-bypass-ristretto = { version = "2", features = ["base64"] }

[dependencies.cbr-macros]
path = "../cbr-macros"
